<resources>
    <string name="app_name">WAPI</string>
    <string name="section1">Usuarios</string>
    <string name="section2">Horario</string>
    <string name="section3">Calificacion</string>
    <string name="section4">Pago</string>
    <string name="section5">Tarea</string>
    <string name="section6">Configuracion</string>

    <string-array name="periodo">
        <item>Semestre 1</item>
        <item>Semestre 2</item>
        <item>Semestre 3</item>
        <item>Semestre 4</item>
        <item>Semestre 5</item>
    </string-array>

    <!-- Activity Login Strings -->
    <string name="activity_login_start">Iniciar</string>
    <string name="activity_login_username">Nombre de usuario</string>
    <string name="activity_login_password">Contraseña</string>
    <string name="activity_login_access_btn">Ingresar</string>
    <string name="activity_login_register_btn">¿No tienes cuenta aún? Crea una aquí.</string>

    <!-- Activity Register Strings -->
    <string name="activity_register_username">Nombre de usuario</string>
    <string name="activity_register_password">Contraseña</string>
    <string name="activity_register_terms">Acepto los términos y condiciones</string>
    <string name="activity_register_btn">Registrarse</string>

    <!--Fragment User Strings -->
    <string name="fragment_user_greeting">Bienvenido </string>
    <string name="fragment_user_homework">Tareas para hoy</string>
    <string name="fragment_user_time_lbl">Hora de entrega:</string>
    <string name="fragment_user_description_lbl">Descripción:</string>

    <!-- Fragment Schedule Strings -->
    <string name="fragment_schedule_monday">Lunes</string>
    <string name="fragment_schedule_tuesday">Martes</string>
    <string name="fragment_schedule_wednesday">Miércoles</string>
    <string name="fragment_schedule_thursday">Jueves</string>
    <string name="fragment_schedule_friday">Viernes</string>
    <string name="fragment_schedule_saturday">Sábado</string>
    <string name="fragment_schedule_sunday">Domingo</string>
    <string name="fragment_schedule_edit_schedule_btn">Editar Horario</string>

    <!-- Fragment Grades Strings -->
    <string name="fragment_grades_title">Calificaciones</string>
    <string name="fragment_grades_subtitle">Materias</string>
    <string name="fragment_grades_average">Promedio:</string>

    <!-- Fragment Payment Strings -->
    <string name="fragment_payment_title">Título</string>
    <string name="fragment_payment_description">Descripción</string>
    <string name="fragment_payment_amount">Cantidad</string>
    <string name="fragment_payment_date">Fecha</string>
    <string name="fragment_payment_date_placeholder">DD/MM/AAAA</string>
    <string name="fragment_payment_hour_placeholder">hh:mm:ss</string>
    <string name="fragment_payment_btn">Añadir Recordatorio</string>
    <string name="fragment_payment_warning_toast">Se tienen que llenar todos los campos. (La hora es opcional).</string>
    <string name="fragment_payment_reminder_title">Recordatorio de pago: </string>
    <string name="fragment_payment_reminder_toast">Recordatorio creado.</string>

    <!-- Fragment Homework Strings -->
    <string name="fragment_homework_title">Tareas</string>
    <string name="fragment_homework_this_week">Esta semana</string>
    <string name="fragment_homework_next_weeks">Próximas semanas</string>

    <!-- Fragment Configuration Strings -->
    <string name="fragment_configuration_username">Nombre de usuario</string>
    <string name="fragment_configuration_password">Contraseña</string>
    <string name="fragment_configuration_edit_btn">Editar</string>
    <string name="fragment_configuration_logout_btn">Cerrar Sesión</string>
    <string name="fragment_configuration_delete_account_btn">Borrar Cuenta</string>
    <string name="fragment_configuration_message_disclaimer">¿Seguro que quiere borrar su cuenta?</string>
    <string name="fragment_configuration_yes">Sí</string>
    <string name="fragment_configuration_no">No</string>

    <!-- Activity Edit Information -->
    <string name="activity_edit_info_title">Editar información</string>
    <string name="activity_edit_info_new_password">Nueva contraseña</string>
    <string name="activity_edit_info_confirm_password">Confirmar contraseña</string>
    <string name="activity_edit_info_btn">Guardar</string>
    <string name="activity_edit_info_toast">Por favor, confirme correctamente la contraseña.</string>

    <!--Activity Edit Subject Strings-->
    <string name="activity_edit_subject_name_hint">Nombre de la materia</string>
    <string name="activity_edit_subject_name_title">Editar Materia</string>
    <string name="activity_edit_subject_cancel">Cancelar</string>
    <string name="activity_edit_subject_delete">Borrar</string>
    <string name="activity_edit_subject_delete_message">Materia eliminada</string>

    <!--Activity Create Subject Strings-->
    <string name="activity_create_subject_name_hint">Nombre de la materia</string>
    <string name="activity_create_subject_name_title">Nueva Materia</string>
    <string name="activity_create_subject_save">Guardar</string>
    <string name="activity_create_subject_cancel">Cancelar</string>
    <string name="activity_create_subject_days_warn">Por favor seleccione los días</string>

    <!--Activity Create and Activity Edit Subject Strings-->
    <string name="activity_subject_start_time">Hora de inicio: </string>
    <string name="activity_subject_colon">:</string>
    <string name="activity_subject_end_time">Hora de fin: </string>
    <string name="activity_subject_save">Guardar</string>
    <string name="activity_subject_monday">Lunes</string>
    <string name="activity_subject_tuesday">Martes</string>
    <string name="activity_subject_wednesday">Miércoles</string>
    <string name="activity_subject_thursday">Jueves</string>
    <string name="activity_subject_friday">Viernes</string>
    <string name="activity_subject_saturday">Sábado</string>
    <string name="activity_subject_incorrect_time_warn">Ingrese horas correctas</string>
    <string name="activity_subject_period_warn">Debes agregar periodos primero</string>

    <!-- Activity Edit Period Strings -->
    <string name="activity_edit_period_add_period">Añadir periodo</string>
    <string name="activity_edit_period_add_name">Nombre del periodo</string>
    <string name="activity_edit_period_btn">Guardar</string>

    <!--Activity Edit Schedule Strings -->
    <string name="activity_edit_schedule_title">Editar Horario</string>
    <string name="activity_edit_schedule_add_period">Añadir periodo</string>
    <string name="activity_edit_schedule_add_subject">Añadir materia</string>
    <string name="activity_edit_schedule_go">Ir</string>
    <string name="activity_edit_schedule_delete">Eliminar periodo</string>
    <string name="activity_edit_schedule_delete_dialog_title">Eliminar periodo</string>
    <string name="activity_edit_schedule_delete_dialog_ok">Sí</string>
    <string name="activity_edit_schedule_delete_dialog_cancel">Cancelar</string>
    <string name="activity_edit_schedule_delete_dialog_message">¿Seguro que desea eliminar este periodo?</string>

    <!--Activity Edit Grade Strings -->
    <string name="activity_edit_grade_title">Editar Calificación</string>
    <string name="activity_edit_grade_description">Descripción</string>
    <string name="activity_edit_grade_description_placeholder">Ingrese descripción</string>
    <string name="activity_edit_grade_percentage">Porcentaje</string>
    <string name="activity_edit_grade_percentage_placeholder">Ingrese porcentaje</string>
    <string name="activity_edit_grade_grade">Calificación</string>
    <string name="activity_edit_grade_grade_placeholder">Ingrese calificación</string>
    <string name="activity_edit_grade_btn">Agregar</string>
    <string name="activity_edit_grade_per_error">Total de porcentajes erróneos.</string>
    <string name="activity_edit_grade_error">Error en datos ingresados.</string>
    <string name="activity_edit_grade_missing_data">Faltan datos por llenar.</string>

    <!-- Activity Edit Homework Strings -->
    <string name="activity_edit_homework_title">Editar Tarea</string>
    <string name="activity_edit_homework_subject">Materia</string>
    <string name="activity_edit_homework_date">Fecha de entrega</string>
    <string name="activity_edit_homework_hour">Hora</string>
    <string name="activity_edit_homework_description">Descripción</string>
    <string name="activity_edit_homework_description_placeholder">Ingrese descripción de la tarea.</string>
    <string name="activity_edit_homework_btn">Agregar</string>
    <string name="activity_edit_homework_toast">Error en datos de hora o fecha.</string>
    <string name="activity_edit_homework_missing_data">Faltan datos por llenas.</string>

    <!--Item Edit Schedule subject Strings -->
    <string name="item_edit_schedule_subject_time_lbl">Horario: </string>
    <string name="item_edit_schedule_subject_days_lbl">Días: </string>

    <!--Item Homework Strings -->
    <string name="item_homework_subject">Materia:</string>
</resources>
