<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_edit_info_title"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin"
            android:textColor="@color/colorPrimary"
            android:textSize="35dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_configuration_username"
            android:textSize="19dp"
            android:layout_marginLeft="@dimen/margin"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/activit_edit_info_name_et"
            style="@style/EditText_dark_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:hint="Nombre" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_edit_info_new_password"
            android:textSize="19dp"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/activit_edit_info_password_et"
            style="@style/EditText_dark_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_edit_info_confirm_password"
            android:textSize="19dp"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/activit_edit_info_confirm_password_et"
            style="@style/EditText_dark_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/activity_edit_info_save_btn"
            style="@style/custom_light_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_edit_info_btn"
            android:textSize="30dp"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>