<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_edit_subject_padding"
    tools:context=".ActivityCreateSubject">

    <TextView
        android:id="@+id/activity_create_subject_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin"
        android:text="@string/activity_create_subject_name_title"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/activity_edit_subject_title"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/activity_create_subject_name"
        style="@style/EditText_dark_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_create_subject_name_hint"
        android:inputType="text" />

    <Spinner
        android:id="@+id/activity_create_subject_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/activity_create_subject_save"
            style="@style/custom_light_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:onClick="addSubject"
            android:layout_marginEnd="@dimen/activity_edit_subject_btn_margin"
            android:text="@string/activity_create_subject_save"
            android:textSize="@dimen/activity_edit_subject_save"/>

    </RelativeLayout>
</LinearLayout>