<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_edit_subject_padding"
    tools:context=".ActivityEditSubject">

    <TextView
        android:id="@+id/activity_edit_subject_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin"
        android:text="@string/activity_edit_subject_name_title"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/activity_edit_subject_title"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/activity_edit_subject_name"
        style="@style/EditText_dark_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_edit_subject_name_hint"
        android:inputType="text" />

    <Spinner
        android:id="@+id/activity_edit_subject_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/activity_edit_subject_save"
                style="@style/custom_light_Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="modifySubject"
                android:layout_marginEnd="@dimen/activity_edit_subject_btn_margin"
                android:text="@string/activity_edit_subject_save"
                android:textSize="@dimen/activity_edit_subject_save" />

            <Button
                android:id="@+id/activity_edit_subject_cancel"
                style="@style/custom_light_Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="cancelSubject"
                android:layout_marginStart="@dimen/activity_edit_subject_btn_margin"
                android:text="@string/activity_edit_subject_cancel"
                android:textSize="@dimen/activity_edit_subject_save" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>